--- a/public/422.html
+++ b/public/422.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
-    background-color: #EFEFEF;
+    background: linear-gradient(115deg, #BB11B0, #FD7B7B);
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
     margin: 0;
+    background-attachment: fixed;
   }
 
   .rails-default-error-page div.dialog {
@@ -58,10 +59,12 @@
   <!-- This file lives in public/422.html -->
   <div class="dialog">
     <div>
-      <h1>The change you wanted was rejected.</h1>
-      <p>Maybe you tried to change something you didn't have access to.</p>
+      <h1>The change you wanted was rejected </h1>
+      <p>Did you try changing something you were not supposed to?</p>
+      <p>If the issue persists, please get in touch with us through our social media!</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>We suggest you go back or <a href="http://www.shotgunz.net">go back to homepage</a></p>
+    <img src="/app/assets/images/shotgunz-logo.png" alt="Sincerely, the Shotgunz team">
   </div>
 </body>
 </html>
