--- a/public/500.html
+++ b/public/500.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
-    background-color: #EFEFEF;
+    background-color: linear-gradient(115deg, #BB11B0, #FD7B7B);
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
     margin: 0;
+    background-attachment: fixed;
   }
 
   .rails-default-error-page div.dialog {
@@ -60,7 +61,9 @@
     <div>
       <h1>We're sorry, but something went wrong.</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>We suggest you go back or <a href="http://www.shotgunz.net">go back to homepage</a></p>
+    <p>If the issue persists, please get in touch with us through our social media!</p>
+    <img src="shotgunz-logo.png" alt="Sincerely, the Shotgunz team">
   </div>
 </body>
 </html>
